--- a/src/local_code/cwave-k8s/makeENV/kindCluster/k8s-cluster/3-node-cluster.yaml
+++ b/src/local_code/cwave-k8s/makeENV/kindCluster/k8s-cluster/3-node-cluster.yaml
@@ -11,8 +11,8 @@ nodes:
         node-labels: "ingress-ready=true"
   image: kindest/node:v1.29.4
   extraPortMappings:
-  - containerPort: 80
-    hostPort: 80
+  - containerPort: 80 # 컨테이너 포트
+    hostPort: 80 # 내컴퓨터 포트
     protocol: TCP
   - containerPort: 443
     hostPort: 443
